src/scss/plugins/calendar.scss
body {
	--calendar-dot: var(--orange);
	--calendar-dot-hover: var(--red);
}

#calendar-container {
	padding: 0;
	font-feature-settings: normal;

	.nav {
		margin: 0 0 1.5em 0;
		padding: 0;


		.title {
			padding-left: 10px;
			font-size: 1rem;
			flex-grow: 4;
			line-height: 1;

			.month,
			.year {
				color: var(--text-normal);
				font-weight: normal;
			}
		}
	}
	.right-nav {
		align-items: flex-start;
		align-self: flex-end;
		margin: 0;
		
		.reset-button {
			margin: 0;
			padding: 0;
			font-size: .75em;
			line-height: 1.5;
			color: var(--text-muted);

			&:hover {
				color: var(--text-normal);
			}
		}
		.arrow svg {
			background-color: currentColor;
			-webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' xml:space='preserve'%3E%3Cpath d='M10 16 20 6l1.4 1.4-8.6 8.6 8.6 8.6L20 26z'/%3E%3Cpath fill='none' d='M0 0h32v32H0z'/%3E%3C/svg%3E");
			opacity: .25;
			
			&:hover {
				opacity: 1;
			}
			& > path {
				display: none;
			}
		}
	
	}
	table {
		table-layout: fixed;
		width: 100%;
		border-collapse: collapse;

		td {
			width: 32px;
		}
		.day,
		.week-num {
			height: 32px;
			width: 100%;
			font-size: .75rem;
			padding: 0;
			display: flex;
			flex-direction: column;
			align-items: center;
			justify-content: center;
		}
		th {
			padding-bottom: 2em;
			border-bottom: 1px solid var(--background-modifier-border);
		}
		
	}
	& .dot-container {
		padding-top: 2px;
		flex-wrap: nowrap;
		justify-content: center;
		align-items: center;
		width: 100%;

		& svg {
			position: absolute;
			--color-dot: var(--calendar-dot);

			&:first-child {
				height: 4px;
				width: 4px;
			}
			&:nth-child(2) {
				height: 6px;
				width: 6px;
			}
			&:nth-child(3) {
				height: 8px;
				width: 8px;
			}
			&:nth-child(4) {
				height: 10px;
				width: 10px;
			}
			&:nth-child(5) {
				height: 12px;
				width: 12px;
			}
		}
	}
	& .day:hover .dot-container svg {
		--color-dot: var(--calendar-dot-hover);
	}
}

.calendar-flip #calendar-container {
	& .nav {
		flex-direction: row-reverse;
		justify-content: space-between;
	}
	.title {
		flex-grow: unset;
		padding-right: 8px;
	}
}


.stendig.calendar-flip #calendar-container {
	& .title {
		justify-content: flex-end;
	}
	& .right-nav {
		justify-content: flex-end;
	}
}

/*	Stendig-like layout
—————————————————————————————————————————————————————————*/

.stendig #calendar-container {
	padding: 0;
	font-feature-settings: normal;



	& .nav {
		flex-direction: column;
		margin-bottom: 2em;
	}
	& .title {
		font-size: 1rem;
		padding-right: 8px;
		display: flex;
		flex-direction: row-reverse;
		width: 100%;
		justify-content: flex-start;
		gap: 2px;
		border-bottom: 1px solid var(--background-modifier-border);
		
	}
	& .right-nav {
		flex-direction: row;
		justify-content: flex-start;
		margin: 0;
		width: 100%;
		gap: 0px;
		align-items: flex-end;
		padding-top: 4px;
		
		& .reset-button {
			margin: 0;
			padding: 0;
			font-size: .75em;
			opacity: .25;

			&:hover {
				opacity: 1;
			}
		}
		
		& .arrow svg {
			background-color: currentColor;
			-webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' xml:space='preserve'%3E%3Cpath d='M10 16 20 6l1.4 1.4-8.6 8.6 8.6 8.6L20 26z'/%3E%3Cpath fill='none' d='M0 0h32v32H0z'/%3E%3C/svg%3E");
			opacity: .25;
			
			&:hover {
				opacity: 1;
			}
			& > path {
				display: none;
			}
		}
	
	}
	& table.calendar {

		& th {
			padding: 0;
			font-size: 1rem;
			font-weight: normal;
			color: var(--text-muted);
			text-align: left;
			color: transparent;
			border: none;

			&:not(:first-of-type) {
				border-left: 1px solid var(--background-modifier-border);
				border-radius: 0;
			}

			&::first-letter {
				color: var(--text-normal);
			}
		}
		& td {
			&:not(:first-of-type) {
				border-left: 1px solid var(--background-modifier-border);
				border-radius: 0;
			}
			& .day,
			& .week-num {
				text-align: left;
				font-size: 1rem;
				padding: 0;
				display: flex;
				flex-direction: row;

				&:hover {
					background-color: var(--background-hover);
				}
			}
			& .week-num {
				opacity: .25;
			}
		}
	}
	& .dot-container {
		padding-top: 0;
	}
	& .day:hover .dot-container svg {
		--color-dot: var(--calendar-dot-hover);
	}
	& th,
	& td {
		padding-left: 2px;
	}
}

